designed mobile Nav and fixed image modal display on mobile

--- a/public/styles/_imageModal.scss
+++ b/public/styles/_imageModal.scss
@@ -1,5 +1,6 @@
 .image--modal{
     @include flex-col;
+    justify-content: flex-start;
     position: absolute;
     width: 50%;
     inset: 0;
@@ -12,12 +13,13 @@
 
     @include mobile{
         width: 100%;
+        height: 100%;
         padding: 1rem;
         margin: 0;
         inset: none;
 
         img{
-            min-width: 100%;
+            width: 100%;
             height: 100%;
         }
     }
