--- a/public/styles/_utilities.scss
+++ b/public/styles/_utilities.scss
@@ -71,7 +71,7 @@ button, input[type="submit"]{
     }
 
     @include mobile{
-        padding: $s-pad;
+        padding: $xs-pad;
         font-size: 0.8rem;
     }
 }
