--- a/public/styles/css/style.css
+++ b/public/styles/css/style.css
@@ -75,7 +75,7 @@ button:hover, .btn--secondary:hover, input[type=submit]:hover {
 }
 @media only screen and (max-width: 1000px) {
   button, .btn--secondary, input[type=submit] {
-    padding: 1rem;
+    padding: 0.5rem;
     font-size: 0.8rem;
   }
 }
@@ -286,6 +286,11 @@ hr {
 .logs--section form textarea:focus {
   outline: none;
 }
+@media only screen and (max-width: 1000px) {
+  .logs--section form textarea {
+    border: 1px solid #c58fff;
+  }
+}
 .logs--section form div:last-child {
   display: flex;
   flex-direction: row;
@@ -298,6 +303,11 @@ hr {
 .logs--section form div:last-child .icon {
   color: rgb(248, 242, 242);
   font-size: 1.3rem;
+}
+@media only screen and (max-width: 1000px) {
+  .logs--section form div:last-child .icon {
+    font-size: 1rem;
+  }
 }
 .logs--section form div:last-child button::first-letter, .logs--section form div:last-child .btn--secondary::first-letter {
   transform: rotate(-30deg);
@@ -313,6 +323,7 @@ hr {
   padding: 0.5rem;
   background-color: #c58fff;
   margin-block: 1rem;
+  display: none;
 }
 .logs--section .selection--menu h2 {
   color: rgb(248, 242, 242);
@@ -504,6 +515,7 @@ footer div * {
   gap: 1.5rem;
   justify-content: center;
   align-items: center;
+  justify-content: flex-start;
   position: absolute;
   width: 50%;
   inset: 0;
@@ -515,13 +527,41 @@ footer div * {
 @media only screen and (max-width: 1000px) {
   .image--modal {
     width: 100%;
+    height: 100%;
     padding: 1rem;
     margin: 0;
     inset: none;
   }
   .image--modal img {
-    min-width: 100%;
+    width: 100%;
     height: 100%;
+  }
+}
+
+.mobile--nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 60%;
+  background-color: #c58fff;
+  font-size: 1.3rem;
+  display: flex;
+  flex-direction: row;
+  gap: 1.5rem;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
+  margin: auto;
+  margin-bottom: 0.5rem;
+  border-radius: 0.5rem;
+  color: rgb(248, 242, 242);
+  display: none;
+}
+@media only screen and (max-width: 1000px) {
+  .mobile--nav {
+    display: flex;
   }
 }
 
